--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.14",
     "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
@@ -19,7 +20,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@swimlane/ngx-charts": "^23.0.0",
+    "@types/d3-shape": "^3.1.7",
     "animejs": "^4.0.2",
+    "d3": "^7.9.0",
     "ogl": "^1.0.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,5 +42,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
+  },
+  "overrides": {
+    "tmp": "0.2.4"
   }
 }
